@@ -30,6 +30,7 @@ dependencies {
     implementation 'com.oracle.database.jdbc:ojdbc10:19.20.0.0'
     implementation 'org.springframework:spring-beans:6.0.13'
     implementation 'org.springframework:spring-jdbc:6.0.13'
+    implementation 'org.jsoup:jsoup:1.16.1'
 
     implementation fileTree(dir: 'lib', include: '*.jar')
 }
