@@ -3,19 +3,19 @@ package edu.mcw.rgd.expressionTpm;
 import edu.mcw.rgd.dao.DataSourceFactory;
 import edu.mcw.rgd.dao.impl.*;
 import edu.mcw.rgd.dao.spring.GeneQuery;
-import edu.mcw.rgd.datamodel.Gene;
-import edu.mcw.rgd.datamodel.MapData;
-import edu.mcw.rgd.datamodel.Transcript;
-import edu.mcw.rgd.datamodel.pheno.ClinicalMeasurement;
-import edu.mcw.rgd.datamodel.pheno.GeneExpressionRecord;
-import edu.mcw.rgd.datamodel.pheno.GeneExpressionRecordValue;
+import edu.mcw.rgd.datamodel.*;
+import edu.mcw.rgd.datamodel.ontologyx.Term;
+import edu.mcw.rgd.datamodel.ontologyx.TermSynonym;
+import edu.mcw.rgd.datamodel.pheno.*;
 import edu.mcw.rgd.datamodel.pheno.Sample;
 import org.springframework.jdbc.core.SqlParameter;
 
 import javax.sql.DataSource;
+import java.io.*;
 import java.sql.Types;
 import java.util.Collection;
 import java.util.List;
+import java.util.zip.GZIPInputStream;
 
 /**
  * Created by llamers on 1/28/2020.
@@ -28,6 +28,8 @@ public class DAO {
     private PhenominerDAO pdao = new PhenominerDAO();
     private TranscriptDAO tdao = new TranscriptDAO();
     private MapDAO mdao = new MapDAO();
+    private ReferenceDAO rdao = new ReferenceDAO();
+    private XdbIdDAO xdbIdDAO = new XdbIdDAO();
 
     public String getConnection(){
         return geneDAO.getConnectionInfo();
@@ -35,6 +37,10 @@ public class DAO {
 
     public Sample getSampleByGeoSampleName(String geoSample) throws Exception{
         return pdao.getSampleByGeoId(geoSample);
+    }
+
+    public List<Sample> getGeoRecordSamplesByStatus(String geoId, String species, String status) throws Exception{
+        return pdao.getGeoRecordSamplesByStatus(geoId,species,status);
     }
 
     public GeneExpressionRecord getGeneExpressionRecordBySample(int sampleId) throws Exception{
@@ -92,5 +98,52 @@ public class DAO {
 
     public List<Gene> getActiveGenesByLocation(String chr, int start, int stop, int mapKey) throws Exception{
         return geneDAO.getActiveGenesNSource(chr,start,stop,mapKey,"NCBI");
+    }
+
+    public Term getTermByAccId(String accId) throws Exception{
+        return xdao.getTermByAccId(accId);
+    }
+
+    public List<TermSynonym> getTermSynonyms(String accId) throws Exception{
+        return xdao.getTermSynonyms(accId);
+    }
+
+    public GeneExpressionRecord getGeneExpressionRecordBySampleId(int sampleId) throws Exception {
+        return gedao.getGeneExpressionRecordBySampleId(sampleId);
+    }
+
+    public List<Condition> getConditions(int recordId) throws Exception{
+        return gedao.getConditions(recordId);
+    }
+
+    public List<GeoRecord> getGeoRecords(String geoId, String species) throws Exception {
+        return pdao.getGeoRecords(geoId, species);
+    }
+
+    public Study getStudyByGeoIdWithReferences(String gse) throws Exception {
+        return gedao.getStudyByGeoIdWithReferences(gse);
+    }
+
+    public Reference getReferenceByRgdId(int rgdId) throws Exception {
+        return rdao.getReferenceByRgdId(rgdId);
+    }
+
+    public List<XdbId> getXdbIdsByRgdId(int xdbKey, int rgdId) throws Exception {
+        return xdbIdDAO.getXdbIdsByRgdId(xdbKey, rgdId);
+    }
+
+    public BufferedReader openFile(String fileName) throws IOException {
+
+        String encoding = "UTF-8"; // default encoding
+
+        InputStream is;
+        if( fileName.endsWith(".gz") ) {
+            is = new GZIPInputStream(new FileInputStream(fileName));
+        } else {
+            is = new FileInputStream(fileName);
+        }
+
+        BufferedReader reader = new BufferedReader(new InputStreamReader(is, encoding));
+        return reader;
     }
 }
